// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> component should match snapshot with label 1`] = `
<DocumentFragment>
  <div
    class="discountContainer relative dib"
  >
    <div
      class="discountInsideContainer t-mini white absolute right-0 pv2 ph3 bg-emphasis z-1"
    >
      <span>
        10%
      </span>
        
      <span>
        LABEL
      </span>
    </div>
    Test
  </div>
</DocumentFragment>
`;

exports[`<DiscountBadge /> component should match snapshot without label 1`] = `
<DocumentFragment>
  <div
    class="discountContainer relative dib"
  >
    <div
      class="discountInsideContainer t-mini white absolute right-0 pv2 ph3 bg-emphasis z-1"
    >
      -
      <span>
        10%
      </span>
       
    </div>
    Test
  </div>
</DocumentFragment>
`;
